# software_mansion_ct2024

./: CMakeCache.txt  CMakeLists.txt  Main  Makefile  README.md  cmake_install.cmake  data.txt  main.cpp  prime.cpp  prime.h
